# smartshelf

./: .dockerignore  .gitignore  NGINX_README.md  README.md  default.conf  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  predictor  pyproject.toml
backend/app/: __init__.py  database.py  main.py
backend/app/models/: __init__.py  agentic.py  db_models.py  predictor.py  product.py  schemas.py
backend/app/models/trained/: time_series_models.joblib
backend/app/routers/: __init__.py  chat.py  products.py  recommendations.py
backend/db/: init.sql
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/.astro/: settings.json
frontend/src/components/: AlertTable.jsx  ChatWidget.jsx  Dashboard.jsx  MetricCard.jsx  Recommendations.jsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/services/: api.js
frontend/src/styles/: global.css
predictor/: README.md  pyproject.toml
predictor/notebooks/: exploration.ipynb
predictor/scripts/: train_models.py
predictor/src/data/: __init__.py  generator.py  preprocessing.py
predictor/src/models/: __init__.py  recommender.py  risk_classifier.py  time_series.py
predictor/src/utils/: __init__.py  metrics.py
