[project]
name = "smartshelf-predictor"
version = "0.1.0"
description = "ML prediction models for SmartShelf inventory optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SmartShelf Team"}
]
maintainers = [
    {name = "SmartShelf Team"}
]
dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "xgboost==2.0.0",
    "prophet==1.1.5",
    "matplotlib==3.7.2",
    "joblib==1.3.2"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "A", "C4", "UP", "PT"]

[tool.ruff.isort]
known-third-party = ["numpy", "pandas", "sklearn", "xgboost", "prophet"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # ML code often uses dynamic typing
disallow_incomplete_defs = false

[project.urls]
Documentation = "https://github.com/yourusername/smartshelf#readme"
Source = "https://github.com/yourusername/smartshelf"
"Bug Tracker" = "https://github.com/yourusername/smartshelf/issues" 